修复搞坏了的饼图 修复使用部分光影时不透明粒子不可见 添加粒子光照缓存
port to 1.21.1